--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,4 +36,4 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/tools/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
