--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -42,6 +42,7 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 #
-font-size = 16
+font-size = 11
 gtk-titlebar  = false
 theme = dark:catppuccin-mocha,light:catppuccin-latte
+background-opacity = 0.9
