--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,11 +4,11 @@ include current-theme.conf
 # END_KITTY_THEME
 #
 
-font_family CaskaydiaCove Nerd Font Mono
+font_family JetBrainsMono Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 14
+font_size 11
 
 background_opacity 0.9
