--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,14 @@
+unbind r
+bind r source-file ~/.tmux.conf
+
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 set -g prefix C-s
+
 set -g mouse on
+
+set-window-option -g mode-keys vi
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -7,6 +16,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 set-option -g status-position top
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux#v2.1.2'
@@ -17,23 +27,14 @@ set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 
 # Load catppuccin
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-# For TPM, instead use `run ~/.config/tmux/plugins/tmux/catppuccin.tmux`
+run ~/.tmux/plugins/tmux/catppuccin.tmux
 
 # Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 
-# Or, if using TPM, just run TPM
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g status-style bg=default
