--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,4 +1,4 @@
 font-size = 11
-gtk-titlebar  = false
+gtk-titlebar = true
 theme = dark:catppuccin-mocha,light:catppuccin-latte
 background-opacity = 0.9
