--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,4 +1,4 @@
 font-size = 11
 gtk-titlebar = true
-theme = dark:catppuccin-mocha,light:catppuccin-latte
+theme = rose-pine-moon
 background-opacity = 0.9
