--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,20 +19,19 @@ set-option -g status-position top
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux#v2.1.2'
+set -g @plugin 'rose-pine/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
+set -g @rose_pine_variant 'moon'
 
-# Load catppuccin
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 # Make the status line pretty and add some modules
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-
+# set -g @rose_pine_status_left_prepend_section '#{tmux_mode_indicator}'
+set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
+set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current directory as window name
+set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
+set -g @rose_pine_bar_bg_disable 'on' # Disables background color, for transparent terminal emulators
+set -g @rose_pine_host 'on'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
