--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
 [global]
-preload = /home/willy/Pictures/Wallpaper/sunset.jpg
+preload = /home/willy/.config/wallpapers/952960.jpg
 
 
-wallpaper = eDP-1,/home/willy/Pictures/Wallpaper/sunset.jpg
+wallpaper = eDP-1,/home/willy/.config/wallpapers/952960.jpg
 # preload = ~/Pictures/Wallpaper/atlantis.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 # preload = /path/to/next_image.png
