--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -70,8 +70,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 3
-    gaps_out = 3
+    gaps_in = 0
+    gaps_out = 0
 
     border_size = 2
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
@@ -89,8 +89,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 3
-    rounding_power = 2
+    rounding = 0
+    rounding_power = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -157,6 +157,7 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    force_split=2
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -183,7 +184,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 0
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -299,4 +300,5 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 windowrulev2 = opacity 0.85 0.75,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(wofi)$
+windowrulev2 = opacity 0.90 0.90,class:^(org.qbittorrent.qBittorrent)$
 
