--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,preferred,auto,1
 
 # Set programs that you use
 $terminal = ghostty
-$fileManager = yazi
+$fileManager = nautilus
 $menu = wofi --show drun
 $browser = firefox
 
@@ -217,7 +217,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $terminal -e $fileManager
+bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, W, exec, $browser
