--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -8,7 +8,7 @@ $git_branch\
 $git_status\
 $cmd_duration\
 $fill\
-$time$battery\n \
+$time$battery${custom.devenv}\n \
 $character\
 """
 
@@ -75,3 +75,9 @@ format = "took [$duration](fg:gold) "
 success_symbol = "[➜](bold rose)"
 error_symbol = "[➜](bold love)"
 
+
+[custom.devenv]
+disabled = false
+command = "echo  $DEVENV"
+when = "env | grep -q '^DEVENV='"
+style = "fg:rose"
