feat(lazyvim tmux): adds lazyvim and new tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,38 +1,39 @@
+##### Reload config #####
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/dotfiles/tmux/.tmux.conf \; display-message "tmux.conf reloaded"
 
+##### Basic settings #####
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -as terminal-overrides ",*:Tc"
 
+##### Prefix #####
 set -g prefix C-s
+unbind C-b
+bind C-s send-prefix
 
 set -g mouse on
+set -g mode-keys vi
 
-set-window-option -g mode-keys vi
-
+##### Pane navigation (vim-like) #####
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-set-option -g status-position top
+##### Status bar base #####
+set -g status on
+set -g status-position top
+set -g status-interval 2
+set -g status-justify left
+set -g status-left-length 80
+set -g status-right-length 150
 
-# List of plugins
+##### Plugins (TPM) #####
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'rose-pine/tmux'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# Configure the catppuccin plugin
-set -g @rose_pine_variant 'moon'
+##### Rose-Pine option #####
+set -g @rose_pine_only_windows 'on'
 
-# Make the status line pretty and add some modules
-# set -g @rose_pine_status_left_prepend_section '#{tmux_mode_indicator}'
-set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
-set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current directory as window name
-set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
-set -g @rose_pine_bar_bg_disable 'on' # Disables background color, for transparent terminal emulators
-set -g @rose_pine_host 'on'
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+##### IMPORTANT: TPM must be last #####
 run '~/.tmux/plugins/tpm/tpm'
-
-set -g status-style bg=default
