adds fav fonts and themes

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,5 +1,5 @@
 include=~/.config/foot/rose-pine
-font=FiraCode Nerd Font Mono
+font=FiraCode Nerd Font Mono:size=10
 pad=10x8
 font-bold=FiraCode Nerd Font:style=Bold
 font-italic=FiraCode Nerd Font:style=Italic
