--- a/dev-containers/.config/dev-containers/Containerfile
+++ b/dev-containers/.config/dev-containers/Containerfile
@@ -1,38 +1,35 @@
-FROM ubuntu:24.04
+FROM archlinux:latest
 
-ENV DEBIAN_FRONTEND=noninteractive
 ENV EDITOR=nvim
 ENV VISUAL=nvim
 
-# Base tools
-RUN apt-get update && apt-get install -y \
+# ------------------------------------------------------------
+# Base system + dev tools
+# ------------------------------------------------------------
+RUN pacman -Syu --noconfirm \
     ca-certificates \
     curl \
     git \
     sudo \
     zsh \
     tmux \
+    neovim \
     ripgrep \
-    fd-find \
+    fd \
     fzf \
-    locales \
     direnv \
-    software-properties-common \
     wl-clipboard \
     stow \
-    && rm -rf /var/lib/apt/lists/*
-
-# Neovim (unstable PPA for LazyVim)
-RUN add-apt-repository -y ppa:neovim-ppa/unstable \
-    && apt-get update \
-    && apt-get install -y neovim \
-    && rm -rf /var/lib/apt/lists/*
-
-# fd compatibility (Ubuntu installs fdfind)
-RUN ln -s /usr/bin/fdfind /usr/local/bin/fd
-
-# Starship prompt (official install)
-RUN curl -sS https://starship.rs/install.sh | sh -s -- -y
-
-# Locale (safe, avoids warnings)
-RUN locale-gen en_US.UTF-8
+    starship \
+    yazi \
+    ffmpeg \
+    p7zip \
+    jq \
+    poppler \
+    resvg \
+    imagemagick \
+    unzip \
+    tar \
+    less \
+    man-db \
+    && pacman -Scc --noconfirm
