change theme to everforest

--- a/dev-containers/.config/dev-containers/Containerfile
+++ b/dev-containers/.config/dev-containers/Containerfile
@@ -8,6 +8,8 @@ ENV VISUAL=nvim
 # ------------------------------------------------------------
 RUN pacman -Syu --noconfirm \
     ca-certificates \
+    gcc \
+    bat \
     curl \
     git \
     sudo \
