--- a/k9s/.config/k9s/config.yaml
+++ b/k9s/.config/k9s/config.yaml
@@ -17,7 +17,7 @@ k9s:
     noIcons: false
     defaultsToFullScreen: false
     useFullGVRTitle: false
-    skin: rose-pine-moon
+    skin: everforest-dark
   skipLatestRevCheck: false
   disablePodCounting: false
   shellPod:
