--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,11 +31,11 @@ set -g status-left-length 80
 set -g status-right-length 150
 
 ##### Plugins (TPM) #####
+set -g @plugin 'TanglingTreats/tmux-everforest' # Adds to the list of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'rose-pine/tmux'
 
 ##### Rose-Pine option #####
-set -g @rose_pine_only_windows 'on'
+set -g @tmux-everforest 'dark-medium' 
 
 ##### IMPORTANT: TPM must be last #####
 run '~/.tmux/plugins/tpm/tpm'
