--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,9 +7,9 @@ set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",*:Tc"
 
 ##### Prefix #####
-set -g prefix C-s
-unbind C-b
-bind C-s send-prefix
+# set -g prefix C-s
+# unbind C-b
+# bind C-s send-prefix
 
 set -g mouse on
 set -g mode-keys vi
@@ -27,6 +27,12 @@ set -g status-interval 2
 set -g status-justify left
 set -g status-left-length 80
 set -g status-right-length 150
+
+##### Pane styling #####
+set -g pane-border-style 'fg=colour240'
+set -g pane-active-border-style 'fg=colour208,bold'
+set -g window-style 'fg=colour247'
+set -g window-active-style 'fg=colour250'
 
 ##### Plugins (TPM) #####
 set -g @plugin 'TanglingTreats/tmux-everforest' # Adds to the list of plugins
